--- a/BODY/2_preliminaries.tex
+++ b/BODY/2_preliminaries.tex
@@ -7,7 +7,11 @@
 \label{chap:data}
 \pagestyle{fancy}
 
+In this chapter we will present some basic concepts necessary to later build 
+
 \section{Type IIB string theory}
+
+
 
 \subsection{D-branes}
 
