--- a/abstract.tex
+++ b/abstract.tex
@@ -7,13 +7,9 @@
 \begin{abstract}
 
 \noindent
+\justify
 % THIS IS JUST AN EXAMPLE OF THE STRUCTURE
-Context, 1-2 sentences of basic introduction or relevance  \\ 
-Background, 2-3 sentences of more detail \\ 
-Problem,  1 sentence with general problem to solve \\ 
-Result, start with 'here we show' 2-3 sentences in total  \\ 
-Consequence, 1-2 sentences of general context \\ 
-Broader perspective, 2-3 sentences of the broader perspective, limit this if needed
 
+In the context of String Theory, freely acting orbifolds have proven to be an effective method of spontaneously breaking supersymmetry (cite). The effects on the spectrum of the closed string in type IIB String Theory have been studied in detail in (cite), and this thesis aims to explore the effects of the SUSY breaking in the open string spectrum. Here we first show how the open string spectrum is affected in general by the orbifold action, and we calculate the full orbifold projection on a specific example of D1/D5 brane system. This system is closely linked to black hole solutions of the low energy supergravity, and in the last section we give predictions as to how the orbifold projection acts on the low energy worldvolume CFT and thus the black hole theormodynamics in the system with broken supersymmetry.
 
 \end{abstract}
