--- a/bibliography.bib
+++ b/bibliography.bib
@@ -55,7 +55,7 @@
       primaryClass={hep-th}
 }
 
-@article{Alvarez-Gaume_Freedman_1981, title={Geometrical structure and ultraviolet finiteness in the supersymmetric $\sigma$-model}, volume={80}, DOI={10.1007/bf01208280}, number={3}, journal={Communications in Mathematical Physics}, author={Alvarez-Gaume, Luis and Freedman, Daniel}, year={1981}, month={Sep}, pages={443–451}} 
+@article{Alvarez-Gaume_Freedman_1981, title={Geometrical structure and ultraviolet finiteness in the supersymmetric $\sigma$-model}, volume={80}, DOI={10.1007/bf01208280}, number={3}, journal={Communications in Mathematical Physics}, author={Alvarez-Gaume, Luis and Freedman, Daniel}, year={1981}, pages={443–451}} 
 
 @misc{mandal2000review,
       title={A review of the D1/D5 system and five dimensional black hole from supergravity and brane viewpoint}, 
