--- a/packages.tex
+++ b/packages.tex
@@ -44,6 +44,10 @@
 %%%%		~~~~ GEOMETRY STYLE ~~~~
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% MAKE ALL THE TEXT JUSTIFIED
+\usepackage{ragged2e}
+\justifying
+
 % SET PAGE MARGINS
 \usepackage[top=30mm, bottom=30mm, inner=35mm, outer=35mm, headsep=10mm, footskip=12mm]{geometry}
 
