--- a/BODY/1_introduction.tex
+++ b/BODY/1_introduction.tex
@@ -7,8 +7,32 @@
 \label{chap:intro}
 \pagestyle{fancy}
 
+%All fundamental forces should be unified in one single theory
+
+%String theory comes to the rescue
+
+%But in low energies there is no susy
+
+%We should have a way to solve that
+
+%Orbifolds come to the rescue
+
+%Higgs-like susy breaking if regarded as a SS reduction
+
+%We will focus on the open string spectrum, which can be related to sugra black holes
+
+%How does the orbifold affect the black holes?
+
+Physics aims to describe the dynamics between all the fundamental constutuents of nature. In the one hand, we can use Quantum Field Theory to describe Particle Physics, and in the other we can use General Relativity to describe astronomical interactions. These two theories are fundamentally different in the sense that the first is a quantum theory, while the second one is not, and the most naive attempts to convert it to quantum language fail fundamentally.
+
+String theory is a paradigm change to the way Particle Physics is built, in the sense that now the fundamental objects are no longer point-like, but extended one dimensional \textit{strings}. Among an impressive list of results that were derived not long after String Theory was invented, the most notable one might be that this fully quantum theory is a theory of gravity, thus being a promising candidate for a unifying theory of physics.
+
+
+
 \section{Outline}
 
-\lipsum{500}
+This thesis will be organized as follows. In Chapter \ref{chap:preliminaries} we will briefly describe general aspects of String Theory relevant for delevoping the later calculations. In Chapter \ref{chap:spectrum} we will describe the massless spectrum of type IIB String Theory from a group theoretical point of view. In Chapter \ref{chap:orbifold} we will use the group theoretical description to understand how the orbifold modifies the spectrum and thus breaks supersymmetry.
 
-\section{Objectives}
+Lastly, in Chapters \ref{chap:gauge} and \ref{chap:infrared} we will give a dynamical description to the spectrum found in previous chapters, with the goal of calculating thermodynamic quantities of the black hole that describes the D1/D5 system in the orbifold background.
+
+\section{Conventions}
