--- a/BODY/2_preliminaries.tex
+++ b/BODY/2_preliminaries.tex
@@ -4,7 +4,7 @@
 
 
 \chapter{Preliminaries}
-\label{chap:data}
+\label{chap:preliminaries}
 \pagestyle{fancy}
 
 In this chapter we will present some basic concepts necessary to later build 
