--- a/BODY/3_spectrum.tex
+++ b/BODY/3_spectrum.tex
@@ -4,10 +4,14 @@
 
 
 \chapter{Open string spectrum}
-\label{chap:method}
+\label{chap:spectrum}
 \pagestyle{fancy}
 
+In this chapter we will describe the spectrum of D-brane systems in the context of type IIB String Theory. We start by discussing single brane spectrums, and then move on to general brane configurations, to conclude with the main example of this thesis, the D1/D5 brane system.
+
 \section{Dp-Dp spectrum}
+
+Consider a single Dp-brane, and the string that attaches its ends to it.
 
 \section{Dp-D(p+4) spectrum}
 
