--- a/BODY/5_gauge.tex
+++ b/BODY/5_gauge.tex
@@ -4,7 +4,7 @@
 
 
 \chapter{D-brane gauge theories}
-\label{chap:conclusion}
+\label{chap:gauge}
 \pagestyle{fancy}
 
 \section{Gauge theory on a single brane and dimensional reduction}
