--- a/BODY/6_infrared.tex
+++ b/BODY/6_infrared.tex
@@ -1,6 +1,6 @@
 
 \chapter{Infrared limit and Black Hole thermodynamics}
-\label{infrared}
+\label{chap:infrared}
 \pagestyle{fancy}
 
 \section{IR SCFT = black hole theormodynamics}
