--- a/BODY/1_introduction.tex
+++ b/BODY/1_introduction.tex
@@ -25,9 +25,17 @@
 
 Physics aims to describe the dynamics between all the fundamental constutuents of nature. In the one hand, we can use Quantum Field Theory to describe Particle Physics, and in the other we can use General Relativity to describe astronomical interactions. These two theories are fundamentally different in the sense that the first is a quantum theory, while the second one is not, and the most naive attempts to convert it to quantum language fail fundamentally.
 
-String theory is a paradigm change to the way Particle Physics is built, in the sense that now the fundamental objects are no longer point-like, but extended one dimensional \textit{strings}. Among an impressive list of results that were derived not long after String Theory was invented, the most notable one might be that this fully quantum theory is a theory of gravity, thus being a promising candidate for a unifying theory of physics.
+String theory is a paradigm change to the way Particle Physics is built, in the sense that now the fundamental objects are no longer point-like, but extended one dimensional \textit{strings}. Among an impressive list of results that were derived not long after String Theory was invented, the most notable one might be that this fully quantum theory is a theory of gravity. Thus, being a promising candidate for a unifying theory of physics.
 
+One of the issues of String Theory is that in order to have a consistent theory (no tachyons) we need to add supersymmetry in the sense of fermionic excitations of the string. It turns out that the low energy effective theory of this system is Super Gravity (SUGRA), which is the supersymmetric extension of Einstein's General Relativity. But, as we all know, supersymmetry is not actually a low energy symmetry of nature in our universe.
 
+At this point, we can look for ways of breaking the supersymmetry of String Theory. The one considered for this thesis is compactification by freely acting orbifolds. In essence, there is a discrete symmetry in the compact dimensions that gets quotiented away, projecting a part of the spectrum that has a nontrivial group charge.
+
+String Theories in orbifolded backgrounds have been studied extensively (cite), with a focus on the closed string spectrum and the low energy SUGRA (cite). It was discovered that the orbifold projection can be regarded as a Higgs-like mechanism for the charged fields.
+
+In this thesis we will focus on the open string spectrum, which has not yet beef fully understood in orbifold backgrounds. A full description of the spectrum will be given in a general orbifold for some specific examples, namely the D1/D5 system.
+
+The main goal is to calculate the central charge of the effective CFT in the infrared (IR) of this D1/D5 system, that is dual to a certain black hole solution of the corresponding SUGRA. This process is still not well understood but a prediction can be made based on the projections of the spectrum.
 
 \section{Outline}
 
