--- a/BODY/2_preliminaries.tex
+++ b/BODY/2_preliminaries.tex
@@ -15,4 +15,6 @@ In this chapter we will present some basic concepts necessary to later build
 
 \subsection{D-branes}
 
+\section{Supersymmetry}
+
 \section{Orbifolds}
