--- a/BODY/A_appendix-A.tex
+++ b/BODY/A_appendix-A.tex
@@ -3,6 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Spinors in various dimensions}
+\label{ap:spinors}
 % START APPENDIX
 \section{Weyl Spinors in $D = 2,4,6,8,10$}
 
