--- a/BODY/2_preliminaries.tex
+++ b/BODY/2_preliminaries.tex
@@ -11,10 +11,16 @@ In this chapter we will present some basic concepts necessary to later build
 
 \section{Type IIB string theory}
 
+%Action, spectrum, GSO projection. Make clear this is not orbifolded
 
+\section{Orbifolds}
 
+%Brief general description, orbifolds with singular points. Freely acting orbifolds.
+ 
 \subsection{D-branes}
+
+%Boundary conditions, talk about fermions too. Argue that only sym orbifolds admit single branes.
 
 \section{Supersymmetry}
 
-\section{Orbifolds}
+%Specific discusion around string theory. Closed 32 supercharges, branes are 1/2-BPS objects, D1/D5 is 1/4-BPS. Representations of supercharges
