--- a/BODY/2_preliminaries.tex
+++ b/BODY/2_preliminaries.tex
@@ -93,7 +93,7 @@ To work a quick example, we can think of a D9 brane covering all directions of t
 All the rest of the single Dp-brane spectrums can be computed from the D9 spectrum by dimensional reduction. The procedure is best understood from the vector. The index $\mu = 0,...,9$ splits into two indices $a = 0,...,p$ and $i = p+1,...,10$, so that a vector $b_{-1/2}^\mu \ket{0} \rightarrow b_{-1/2}^a \otimes b_{-1/2}^i \ket{0}$. The procedure for spinor representations is outlined in detail in Appendix \ref{ap:spinors}. In summary, if we wanted to calculate the D5 spectrum with the data from the D9 spectrum, the dimensional reduction would go as follows,
 
 \begin{align*}
-    SO(1,9) &\rightarrow SO(1,5) \times SO(1,4) \\
+    SO(1,9) &\rightarrow SO(1,5) \times SO(4) \\
     \mathbf{10} &\rightarrow (\mathbf{6},\mathbf{1}) \oplus (\mathbf{1}, \mathbf{4}) \\
     \mathbf{16}_s &\rightarrow (\mathbf{4}_s, \mathbf{2}_s) \oplus (\mathbf{4}_c, \mathbf{2}_c)
 \end{align*}
@@ -101,3 +101,5 @@ All the rest of the single Dp-brane spectrums can be computed from the D9 spectr
 \section{Supersymmetry}
 
 %Specific discusion around string theory. Closed 32 supercharges, branes are 1/2-BPS objects, D1/D5 is 1/4-BPS. Representations of supercharges
+
+Esto es una prueba de compilación
